Intellij/tests/invalid/syntax/wrongtype.masl
/* invalid: declaring list of numbers */
numbers: 1, 2, 3, 4.